<resources>
    <string name="app_name">Modak</string>
    <string name="create_account">Create Account</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="yes_i_have_read_and_accept">Yes I have read and accept</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="apartment_unit">Apartment/Unit</string>
    <string name="street_name">Street Name</string>
    <string name="block_no">Block No</string>
    <string name="area_code">Area Code</string>
    <string name="email">Email</string>
    <string name="viewcart">View Cart</string>
    <string name="last_name">Last Name</string>
    <string name="proceed">Proceed</string>
    <string name="comments">Type Comments here</string>
    <string name="select_order_title">Select Order Pick-up Location</string>
    <string name="choosetime">Choose Time</string>
    <string name="choosemode">Choose Mode</string>
    <string name="pickup_title">Order Status:</string>
    <string name="pickup_date_time">Pending</string>
    <string name="payment_status">Payment Status:</string>
    <string name="get_direction">Get Direction</string>
    <string name="your_order_title">Your Order</string>
    <string name="you_order_item_qnty">(You have</string>
    <string name="you_order_item_qnty1">items in your order)</string>
    <string name="dish_name_title">Dish Name &amp; Unit Price</string>
    <string name="quantity">Qty</string>
    <string name="price_total">00.00</string>
    <string name="condition"> Terms and Conditions.</string>
    <string name="mandatory">*</string>
    <string name="filter_menu_name">Filter</string>
    <string name="QTY">Qty</string>
    <string name="subtotal_title">Subtotal</string>
    <string name="price_sub_total">00.00</string>
    <string name="delivery_fee_title">Delivery Fee</string>
    <string name="delivery_fee">0.00</string>
    <string name="tax_title">Tax</string>
    <string name="tax_fee">00.00</string>
    <string name="total_title">Total</string>

    <string name="zipcode">Zipcode</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="please_login_or_register_to_continue_with_your_order">Please login or register to continue with your order</string>
    <string name="chef_decsription1">Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknows printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="chef_decsription2">it has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset</string>
    <string name="language_spoken">Language(s) Spoken</string>
    <string name="language">language</string>
    <string name="item_type_chef">Cuisines</string>
    <string name="item_type_name">item type</string>
    <string name="mode">Mode</string>
    <string name="mode_type">Mode Type</string>
    <string name="food_type">Food Type</string>
    <string name="food_type_name">food type</string>
    <string name="connect_using">connect using</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="enter_cell_no">Enter Cell No</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="state">State</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="footer_delivery">Delivery</string>
    <string name="footer_dine_in">Dine In</string>
    <string name="footer_favourite">Favorites</string>
    <string name="footer_take_out">Take Out</string>
    <string name="edittext_hint_txt">501, Angel Complex,5th Floor,B/H Stadium</string>
    <string name="Rs">\u20B9</string>
    <string name="enter_zip_code_or_address">Enter Zip Code or Address</string>
    <string name="facebook_app_id">2020276654763614</string>
    <string name="fb_login_protocol_scheme">fb2020276654763614</string>
    <string name="share">Share</string>
    <string name="reviews">Reviews</string>
    <string name="rate">Rate</string>
    <string name="menu">Menu</string>
    <string name="read_more">Read More</string>
    <string name="title_activity_maps">Map</string>
    <string name="dinein">Dine In</string>
    <string name="takeout">Take Out</string>
    <string name="delivery">Delivery</string>
    <string name="change">Change</string>
    <string name="payment_method_selection">Payment Method</string>
    <string name="date_time_review1">5PM-8PM (You will get confirmation soon)</string>
    <string name="date_time_review">Delivery Time</string>
    <string name="thank_you">Thank you for your order</string>
    <string name="order_no_is">Your Order No is:</string>

</resources>
