<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Register">


    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_back_color"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/logo_login" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_Signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout1"
        android:background="@color/grey_color"
        android:padding="6dp"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="25sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bg_image"
        android:layout_below="@id/txt_Signup">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edt_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:hint="@string/first_name"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edt_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:hint="@string/last_name"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput1"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput2"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput3"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="#000000">

                    <EditText
                        android:id="@+id/edt_areacode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#000000"
                        android:hint="@string/area_code"
                        android:inputType="number"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColorHint="#000000">

                    <EditText
                        android:id="@+id/edt_cellcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#000000"
                        android:maxLength="10"
                        android:hint="@string/enter_cell_no"
                        android:inputType="number"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout2"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edt_blockno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:hint="@string/block_no"
                    android:inputType="number"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput5"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edt_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:hint="@string/street_name"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput6"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edt_apartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:hint="@string/apartment_unit"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput7"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edt_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:hint="@string/city"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput8"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edt_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:hint="@string/zip_code"
                    android:inputType="number"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput9"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:autoSizeTextType="uniform"
                    android:checked="false"
                    android:text="@string/yes_i_have_read_and_accept"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/terms_and_condition"
                    android:textColor="#000000" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bg_image"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@id/create_account"
        android:background="@mipmap/bg"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_back_color"
        android:layout_alignParentBottom="true"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:gravity="center" />
</RelativeLayout>
