<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/bg_login"
    android:layout_height="match_parent"
    android:fillViewport="false"
    tools:context=".ui.Login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#40FFFFFF"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#FFFFFF"
        android:autoSizeTextType="uniform"
        android:text="@string/please_login_or_register_to_continue_with_your_order" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image1"
        android:layout_width="261dp"
        android:layout_height="79dp"
        android:layout_below="@id/linear_layout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@mipmap/logo_login"
        android:contentDescription="@string/todo" />
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textinput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="#FFFFFF"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
        android:layout_below="@id/image1">

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@id/textinput">

        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:layout_marginTop="25dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@id/textinput1"
        android:background="@drawable/btn_design"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtforgotpassword"
        android:text="@string/forgot_your_password"
        android:textColor="#FFFFFF"
        android:layout_below="@id/login_btn"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/linear_layout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtforgotpassword"
            android:orientation="horizontal">
            <View
                android:id="@+id/divider2"
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_marginTop="48dp"
                android:background="#60FFFFFF" />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/or"
                android:id="@+id/btn_or"
                android:textSize="20sp"
                android:layout_marginTop="19dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/round_btn_design"/>
            <View
                android:id="@+id/divider3"
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_marginTop="48dp"
                android:background="#60FFFFFF" />
        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_connectusing"
        android:text="@string/connect_using"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:layout_below="@id/linear_layout4"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_connectusing">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/btn_fb"/>

        <Button

            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:src="@mipmap/btn_gplus"
            android:layout_weight="1.0"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/btn_facebook"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/btn_gplus"
            android:id="@+id/btn_google" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/linear_layout2">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#FFFFFF"
            android:autoSizeTextType="uniform"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txt_Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:autoSizeTextType="uniform"
            android:textColor="#FDB415" />
</LinearLayout>
    </RelativeLayout>
</ScrollView>