<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Edit_Profile">

    <include layout="@layout/custom_appbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/edit_profile_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/grey_color" />

            <ImageView
                android:id="@+id/edit_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@mipmap/bg_myprofile" />
        </RelativeLayout>

        <ScrollView
            android:layout_below="@id/edit_profile_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/edit_profile_layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_profile_firstname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image1"
                        android:layout_weight="3"
                        android:textColorHint="@color/red_color">

                        <EditText
                            android:id="@+id/edtfirstname_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/black_color"
                            android:hint="@string/first_name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/black_color"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_profile_lastname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image1"
                        android:layout_weight="3"
                        android:textColorHint="@color/red_color">

                        <EditText
                            android:id="@+id/edtlastname_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/black_color"
                            android:hint="@string/last_name"
                            android:inputType="text"
                            android:textColor="@color/black_color"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_profile_address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/red_color">

                    <EditText
                        android:id="@+id/edt_address1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black_color"
                        android:hint="@string/address_line_1"
                        android:inputType="text"
                        android:textColor="@color/black_color"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_profile_address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/red_color">

                    <EditText
                        android:id="@+id/edt_address2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black_color"
                        android:hint="@string/address_line_2"
                        android:inputType="text"
                        android:textColor="@color/black_color"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_profile_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/red_color">

                    <EditText
                        android:id="@+id/edt_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black_color"
                        android:hint="@string/city"
                        android:inputType="text"
                        android:textColor="@color/black_color"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_profile_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/red_color">

                    <EditText
                        android:id="@+id/edt_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black_color"
                        android:hint="@string/state"
                        android:inputType="text"
                        android:textColor="@color/black_color"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_profile_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/red_color">

                    <EditText
                        android:id="@+id/edt_profile_zipcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black_color"
                        android:hint="@string/zip_code"
                        android:inputType="number"
                        android:textColor="@color/black_color"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/save_btn"
            android:background="@color/btn_back_color"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:text="Save"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </RelativeLayout>
</LinearLayout>